KbuildComposer: Fix charset problem when generating files